Additional field added in coupon service response

--- a/nycity_taxi_ad_api_java/src/main/resources/application.properties
+++ b/nycity_taxi_ad_api_java/src/main/resources/application.properties
@@ -3,5 +3,5 @@
 cloudML.predict.rest.url=https://ml.googleapis.com/v1beta1/projects/billion-taxi-rides/models/taxiadz/versions/v4:predict
 #cloudML.predict.rest.url=https://ml.googleapis.com/v1beta1/projects/instantinsightsnext17/models/taxi_ad_predictor/versions/v1:predict
 
-## Coupon discount mapping file location ##
-coupon.discount.map.file=coupon-discount.properties
+## Coupon Details File Name ##
+coupons.json.file=coupons.json
