Modified the code to integrate adcount check before returning ad Id

--- a/nycity_taxi_ad_api_java/src/main/resources/application.properties
+++ b/nycity_taxi_ad_api_java/src/main/resources/application.properties
@@ -5,3 +5,6 @@ cloudML.predict.rest.url=https://ml.googleapis.com/v1beta1/projects/billion-taxi
 
 ## Coupon Details File Name ##
 coupons.json.file=coupons.json
+
+## Ad Count Threshold Limit File Name ##
+coupons.threshold.limit.file=adthresholdlimit.properties
