--- a/nycity_taxi_ad_api_java/pom.xml
+++ b/nycity_taxi_ad_api_java/pom.xml
@@ -26,11 +26,11 @@
             <version>1.5.3.RELEASE</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>gcloud-java-core</artifactId>
             <version>0.2.8</version>
-        </dependency>
+        </dependency> -->
 
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -49,6 +49,23 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <version>1.5.3.RELEASE</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>  <!-- declare the exclusion here -->
+                    <groupId> com.vaadin.external.google</groupId>
+                    <artifactId>android-json</artifactId>
+                </exclusion>
+            </exclusions>
+
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-datastore</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
         </dependency>
     </dependencies>
 
