--- a/nycity_taxi_ad_api_java/src/main/appengine/app.yaml
+++ b/nycity_taxi_ad_api_java/src/main/appengine/app.yaml
@@ -9,3 +9,14 @@ handlers:
 - url: /.*
   script: this field is required, but ignored
 
+automatic_scaling:
+  min_num_instances: 2
+  max_num_instances: 20
+  cool_down_period_sec: 120 # default value
+  cpu_utilization:
+    target_utilization: 0.5
+
+resources:
+  cpu: 2
+  memory_gb: 8
+  disk_size_gb: 10
