--- a/nycity_taxi_coupon_redeem_server/pom.xml
+++ b/nycity_taxi_coupon_redeem_server/pom.xml
@@ -24,10 +24,6 @@
             <version>0.13.0-beta</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-spanner -->
-
-
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -46,10 +42,17 @@
             <version>2.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.7.0</version>
+        </dependency>
 
-
-
-        <!-- https://mvnrepository.com/artifact/com.google.cloud/google-cloud-spanner -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.7.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.mockito</groupId>
